# openmv_rpc_protocol

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pixi.toml  pyproject.toml  rpc_master.py  rpc_slave.py
.github/workflows/: ci.yml
src/rpc_protocol/: rpc.py  rpc_master.py  rpc_slave.py
src/rpc_protocol/tests/: test_placeholder.py
